--- a/pom.xml
+++ b/pom.xml
@@ -24,22 +24,20 @@
             <artifactId>javafx-fxml</artifactId>
             <version>11</version>
         </dependency>
-        <!-- <dependency>
+        <dependency>
             <groupId>org.openjfx</groupId>
             <artifactId>javafx-graphics </artifactId>
             <version>11</version>
             <classifier>win</classifier>
-        </dependency> -->
+        </dependency>
         <dependency>
-            <groupId>com.google.code.gson</groupId>
-            <artifactId>gson</artifactId>
-            <version>2.8.5</version>
+            <groupId>com.fasterxml.jackson.core</groupId>
+            <artifactId>jackson-databind</artifactId>
+            <version>2.9.8</version>
         </dependency>
     </dependencies>
     <build>
-
         <finalName>${project.artifactId}</finalName>
-
         <plugins>
             <plugin>
                 <artifactId>maven-compiler-plugin</artifactId>
